@startuml
skinparam defaultFontName "Noto Sans CJK SC"
skinparam defaultFontSize 14
title 充电站管理系统前端类图 (Flutter/Dart)
skinparam package {
  BackgroundColor #F0F0F0
  BorderColor #666666
}

package "Flutter 前端 (Dart Model)" as FE #ADD8E6 {

  class "UserModel" as FUser {
    - id: String
    - name: String
    - phone: String
    - plateNumber: String
    - role: String
    - balance: double
  }
  note right of FUser : 用户模型，用于 UI 展示\n与表单绑定

  class "StationModel" as FStation {
    - id: String
    - name: String
    - location: String
    - chargerCount: int
    - status: String
  }
  note right of FStation : 充电站列表数据

  class "ChargerModel" as FCharger {
    - id: String
    - chargerCode: String
    - type: String
    - status: String
    - onlineStatus: String
    - stationName: String
  }
  note right of FCharger : 充电桩状态及所属站

  class "ChargeRecordModel" as FCRecord {
    - id: String
    - startTime: String
    - endTime: String
    - energyKwh: double
    - fee: double
    - status: String
    - deductionStatus: String
    - userName: String
    - plateNumber: String
    - chargerCode: String
    - stationName: String
  }
  note right of FCRecord : 充电记录快捷视图

  class "PaymentModel" as FPayment {
    - id: String
    - chargeRecordId: String
    - method: String
    - amount: double
    - status: String
  }

  class "RepairModel" as FRepair {
    - id: String
    - chargerId: String
    - chargerCode: String
    - description: String
    - status: String
    - reporterName: String
    - reportedAt: String
  }

  class "ChargerUserModel" as FChargerUser {
    - id: String
    - loginId: String
    - name: String
    - permissionLevel: String
    - chargerId: String?
    - stationId: String?
    - parentId: String?
    - tokenVersion: int
    - isActive: bool
    - lastLoginAt: String?
  }
  note right of FChargerUser : 充电桩站设备身份模型\n三级权限：CHARGER/STATION/STATION_GLOBAL

  class "LoginRequest" as LoginReq {
    - phone: String
    - password: String
  }
  note right of LoginReq : JSON 序列化请求体

  class "LoginResponse" as LoginResp {
    - accessToken: String
    - refreshToken: String
    - user: UserModel
  }

  class "ApiService" as Api {
    + {static} login(phone, password): Future<LoginResponse>
    + {static} register(name, phone, password, plateNumber, captchaId, captchaCode): Future<void>
    + {static} refreshToken(refreshToken): Future<LoginResponse>
    + {static} getBalance(): Future<double>
    + {static} changePassword(oldPwd, newPwd): Future<void>
    + {static} resetPassword(phone, captchaId, captchaCode): Future<void>
    + {static} confirmPasswordReset(token, smsCode, newPassword, captchaId, captchaCode): Future<void>
    + {static} startCharge(chargerId): Future<ChargeRecordModel>
    note right of Api : userId 由服务端从 JWT Token 解析\n请求体: {chargerId}
    + {static} stopCharge(recordId): Future<ChargeRecordModel>
    + {static} forceStop(recordId, reason): Future<Map>
    note right of Api : forceStop 强制结束充电，需 ADMIN/SUPER_ADMIN 权限
    + {static} recharge(amount, method, idempotencyKey): Future<PaymentModel>
    + {static} submitRepair(chargerId, description): Future<RepairModel>
    + {static} assignRepair(repairId, maintainerId): Future<void>
    + {static} claimRepair(repairId): Future<void>
    + {static} resolveRepair(repairId): Future<void>
    + {static} closeRepair(repairId): Future<void>
    + {static} rejectRepair(repairId, reason): Future<void>
    + {static} softDeleteRepair(repairId): Future<void>
    + {static} approveDeleteRepair(repairId): Future<void>
    + {static} getStations(): Future<List<StationModel>>
    + {static} searchStations(name): Future<List<StationModel>>
    + {static} getChargers(stationId): Future<List<ChargerModel>>
    + {static} getChargerByCode(code): Future<ChargerModel>
    + {static} getChargeRecords(): Future<List<ChargeRecordModel>>
    + {static} getRepairs(): Future<List<RepairModel>>
    + {static} getPayments(): Future<List<PaymentModel>>
    + {static} getDeductions(): Future<List<PaymentModel>>
    + {static} getPendingPayments(): Future<List<PaymentModel>>
    + {static} approvePayment(paymentId): Future<void>
    + {static} rejectPayment(paymentId, reason): Future<void>
    + {static} payArrears(recordId, method): Future<void>
    + {static} getUserChargeStats(): Future<List<Map>>
    + {static} getStationAnalysis(): Future<List<Map>>
    + {static} getChargerUtilization(): Future<Map>
    + {static} getFaultChargers(): Future<List<Map>>
    + {static} changeRole(userId, newRole): Future<void>
    + {static} deleteUser(userId): Future<void>
    + {static} updateUser(userId, data): Future<void>
    + {static} updateProfile(data): Future<void>
    + {static} searchUsers(keyword): Future<List<UserModel>>
    + {static} chargerLogin(loginId, password): Future<LoginResponse>
    + {static} resetChargerToken(targetUserId): Future<void>
    + {static} getChargerUsers(): Future<List<Map>>
    + {static} plugIn(chargerId): Future<Map>
    + {static} unplug(chargerId): Future<Map>
    + {static} selectCharger(chargerId, sessionId): Future<Map>
    + {static} getActiveCharges(): Future<List<Map>>
    + {static} exportCsv(type, params): Future<void>
  }
  note right of Api : 基于 http 包封装 REST API 调用\n自动附加 JWT Token (Authorization: Bearer)\n统一错误处理与异常转换\n所有方法返回 Future，异步非阻塞\n生产环境必须启用 HTTPS，密码仅 HTTPS 加密传输

  class "AuthProvider" as Auth {
    - accessToken: String?
    - refreshToken: String?
    - currentUser: UserModel?
    + login(phone, password, captchaId, captchaCode): Future<void>
    + register(name, phone, password, plateNumber, captchaId, captchaCode): Future<void>
    + logout(): void
    + refreshAccessToken(): Future<bool>
    + tryAutoLogin(): Future<bool>
    + refreshBalance(): Future<void>
    + isLoggedIn: bool
    + userRole: UserRole
  }
  note right of Auth : ChangeNotifier/Provider 实现\n状态管理驱动 UI 重建\nToken 过期自动刷新\nrefresh_token 轮换：每次刷新时服务端使旧 refresh_token 失效并颁发新 token

  class "ChargingProvider" as CP {
    - stations: List<StationModel>
    - chargers: List<ChargerModel>
    - currentRecord: ChargeRecordModel?
    + fetchStations(): Future<void>
    + startCharge(chargerId): Future<void>
    + stopCharge(recordId): Future<void>
  }
  note right of CP : 充电业务状态管理\n管理站点列表、桩列表、当前充电记录

  class "RepairProvider" as RP {
    - repairs: List<RepairModel>
    + fetchRepairs(): Future<void>
    + submitRepair(chargerId, desc): Future<void>
  }

  class "StatisticsProvider" as StatsP {
    - chargeStats: List<Map>
    - stationAnalysis: List<Map>
    - chargerUtilization: Map
    - faultChargers: List<Map>
    + fetchUserChargeStats(): Future<void>
    + fetchStationAnalysis(): Future<void>
    + fetchChargerUtilization(): Future<void>
    + fetchFaultChargers(): Future<void>
  }
  note right of StatsP : 统计报表状态管理\n管理用户充电统计、运营分析、使用率、故障桩列表
}

' ===== 关联关系 =====
Api ..> LoginReq : 序列化请求
Api ..> LoginResp : 反序列化响应
Api ..> FStation : 返回 List
Api ..> FCharger : 返回 List
Api ..> FUser : 返回
Api ..> FCRecord : 返回 List
Api ..> FPayment : 返回 List
Api ..> FRepair : 返回 List

Auth --> FUser : 持有当前用户
Auth ..> Api : 调用 HTTP
CP ..> Api : 调用 HTTP
CP --> FStation : 持有列表
CP --> FCharger : 持有列表
CP --> FCRecord : 持有
RP ..> Api : 调用 HTTP
RP --> FRepair : 持有列表
StatsP ..> Api : 调用 HTTP

@enduml